Change channel from techpreview to 1.4.x

--- a/script/Makefile
+++ b/script/Makefile
@@ -316,7 +316,7 @@ GOLDFLAGS += -X github.com/apache/camel-k/pkg/cmd.VersionVariant=RedHat
 GOLDFLAGS += -X github.com/apache/camel-k/pkg/install.KamelCLIDownloadURLTemplate=https://mirror.openshift.com/pub/openshift-v4/clients/camel-k/%s/camel-k-client-%s-%s-64bit.tar.gz
 GOLDFLAGS += -X github.com/apache/camel-k/pkg/util/olm.DefaultOperatorName=red-hat-camel-k-operator
 GOLDFLAGS += -X github.com/apache/camel-k/pkg/util/olm.DefaultPackage=red-hat-camel-k
-GOLDFLAGS += -X github.com/apache/camel-k/pkg/util/olm.DefaultChannel=techpreview
+GOLDFLAGS += -X github.com/apache/camel-k/pkg/util/olm.DefaultChannel=1.4.x
 GOLDFLAGS += -X github.com/apache/camel-k/pkg/util/olm.DefaultSource=redhat-operators
 GOLDFLAGS += -X github.com/apache/camel-k/pkg/util/maven.DefaultMavenRepositories=https://maven.repository.redhat.com/ga@id=redhat.ga,https://repository.jboss.org/nexus/content/groups/ea@id=jboss.ea,https://repo.maven.apache.org/maven2@id=central
 
